Add document sections

--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -81,7 +81,25 @@
     \end{table}
 
     \section{ที่มาและความสำคัญ}
-    \include{introduction}
+    \include{intro/intro}
+
+    \section{ทฤษฎีที่เกี่ยวข้อง}
+    \include{related/related}
+
+    \section{งานวิจัยที่เกี่ยวข้อง}
+    \include{related-workd/related-work}
+
+    \section{แนวคิดและวิธีการดำเนินงาน}
+    \include{methodology/methodology}
+
+    \section{วัตถุประสงค์ของงานวิจัย}
+    \include{objective/objective}
+
+    \section{ขอบเขตงานวิจัย}
+    \include{limitation/limitation}
+
+    \section{ขั้นตอนการดำเนินงาน}
+    \include{limitation/limitation}
 
 
 \end{document}
