Change thesis name

--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -28,8 +28,8 @@
 \newcommand{\advisor}{รศ.ดร.ธาราทิพย์ สุวรรณศาสตร์}
 \newcommand{\thakeywords}{}
 \newcommand{\engkeywords}{}
-\newcommand{\ThesisThaName}{การสร้างกรณีทดสอบด้วยการวิเคราะห์แผนภาพการเรียกหา}
-\newcommand{\ThesisEngName}{Test case generation with Static Call Graph analysis}
+\newcommand{\ThesisThaName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
+\newcommand{\ThesisEngName}{Test case generation based on Java Static Call Graph}
 
 \usepackage{titlesec}
 \titleformat{\section}{\bfseries}{\thesection}{1em}{}
