Remove constance definition section

--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -16,20 +16,7 @@
 
 \usepackage{lipsum}
 
-\newcommand{\studentname}{นายสิทธิพงษ์ เหล่าโก้ก}
-\newcommand{\studentid}{5870972621}
-\newcommand{\curriculumn}{วิทยาศาสตร์มหาบัณฑิต}
-\newcommand{\major}{วิศวกรรมซอฟต์แวร์}
-\newcommand{\department}{วิศวกรรมคอมพิวเตอร์}
-\newcommand{\faculty}{วิศวกรรม}
-\newcommand{\address}{สถานที่ติดต่อ}
-\newcommand{\telephone}{0861-629-9905}
-\newcommand{\emailaddress}{sitdhibong.l@student.chula.ac.th}
-\newcommand{\advisor}{รศ.ดร.ธาราทิพย์ สุวรรณศาสตร์}
-\newcommand{\thakeywords}{}
-\newcommand{\engkeywords}{}
-\newcommand{\ThesisThaName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
-\newcommand{\ThesisEngName}{Test case generation based on Java Static Call Graph}
+\include{thesis-lexicon}
 
 \usepackage{titlesec}
 \titleformat{\section}{\bfseries}{\thesection}{1em}{}
