Reformat first page structure

--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -16,8 +16,13 @@
 
 \include{thesis-lexicon}
 
+\usepackage{indentfirst}
+\let\@afterindentfalse\@afterindenttrue
+\@afterindenttrue
 \usepackage{titlesec}
 \titleformat{\section}{\bfseries}{\thesection}{1em}{}
+
+\setlength\parindent{0.5in}
 
 \begin{document}
     \thispagestyle{empty}
@@ -65,27 +70,24 @@
         \end{tabular*}
     \end{table}
 
-    \section{ที่มาและความสำคัญ}
-    \include{intro/intro}
+    \input{intro/intro}
 
-    \section{ทฤษฎีที่เกี่ยวข้อง}
-    \include{related/related}
+    \input{related/related}
 
-    \section{งานวิจัยที่เกี่ยวข้อง}
-    \include{related-workd/related-work}
+    \input{related-work/related-work}
 
-    \section{แนวคิดและวิธีการดำเนินงาน}
-    \include{methodology/methodology}
+    \input{methodology/methodology}
 
-    \section{วัตถุประสงค์ของงานวิจัย}
-    \include{objective/objective}
+    \input{objective/objective}
 
-    \section{ขอบเขตงานวิจัย}
-    \include{limitation/limitation}
+    \input{limitation/limitation}
 
-    \section{ขั้นตอนการดำเนินงาน}
-    \include{limitation/limitation}
-
+    % -------------------- 
+    % References section
+    % -------------------- 
+    \bibliographystyle{acm}
+    \bibliography{references}
+    % --------------------
 
 \end{document}
 
