Add thesis constants

--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -8,7 +8,7 @@
 \newcommand{\telephone}{0861-629-9905}
 \newcommand{\emailaddress}{sitdhibong.l@student.chula.ac.th}
 \newcommand{\advisor}{รศ.ดร.ธาราทิพย์ สุวรรณศาสตร์}
-\newcommand{\thakeywords}{}
-\newcommand{\engkeywords}{}
+\newcommand{\thakeywords}{การสร้างกรณีทดสอบ, ภาษาจาวา, กราฟการเรียกใช้เชิงสถิต}
+\newcommand{\engkeywords}{Test case generation, Java language, Static call graph}
 \newcommand{\ThesisThaName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
-\newcommand{\ThesisEngName}{Test case generation based on Java Static Call Graph}
+\newcommand{\ThesisEngName}{Test case generation based on Java static call graph}
