Update references doc

--- a/references.bib
+++ b/references.bib
@@ -105,3 +105,19 @@
     address = "Cambridge"
 }
 
+@book{Bourque2014,
+    abstract = {SWEBOK V3.0 is the most recent completely revised and updated version of the internationally respected Guide to the Software Engineering Body of Knowledge. Newly imagined as a living, changing document, and thoroughly rewritten, SWEBOK V3.0 has been developed and created by leading authorities, reviewed by professionals, and made available for public review and comment, continuing its 20-year reputation as the most authoritative, fundamental, and trusted definition of the software engineering profession. SWEBOK V3.0 is comprised of 15 Knowledge Areas, plus a new Appendix on Standards. SWEBOK V3.0 is now specifically designed to be constantly reviewed and updated as technology and the engineering profession changes over time, remaining consistently relevant. Be sure to register to receive notifications when the SWEBOK Guide is revised.},
+    author = {Bourque, Pierre and Fairley, Richard E.},
+    booktitle = {IEEE Computer Society},
+    doi = {10.1234/12345678},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Theory-of-Testing/SWEBOKv3.pdf:pdf},
+    isbn = {0-7695-2330-7},
+    issn = {07407459},
+    mendeley-groups = {Testing},
+    pages = {346},
+    pmid = {13861254},
+    title = {{Guide to the Software Engineering - Body of Knowledge.}},
+    url = {www.swebok.org},
+    year = {2014}
+}
+
