Remove additional config

--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -15,14 +15,7 @@
 \renewcommand{\baselinestretch}{1.2}
 
 \include{thesis-lexicon}
-
-\usepackage{indentfirst}
-\let\@afterindentfalse\@afterindenttrue
-\@afterindenttrue
-\usepackage{titlesec}
-\titleformat{\section}{\bfseries}{\thesection}{1em}{}
-
-\setlength\parindent{0.5in}
+\include{configure}
 
 \begin{document}
     \thispagestyle{empty}
