Add required macros

--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -1,3 +1,12 @@
+\newcommand{\ThesisProposalTH}{โครงร่างวิทยานิพนธ์}
+\newcommand{\ThesisProposalEN}{Thesis Proposal}
+\newcommand{\ThesisTopic}{หัวข้อวิทยานิพนธ์}
+
+% - - - - - - - - - - - - - - - - - - - -
+% NEED BY \makethesiscover
+% - - - - - - - - - - - - - - - - - - - -
+\newcommand{\ThesisThaiName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
+\newcommand{\ThesisEnglishName}{Test case generation based on Java static call graph}
 \newcommand{\studentname}{นายสิทธิพงษ์ เหล่าโก้ก}
 \newcommand{\studentid}{5870972621}
 \newcommand{\curriculumn}{วิทยาศาสตร์มหาบัณฑิต}
@@ -10,5 +19,3 @@
 \newcommand{\advisor}{รศ.ดร.ธาราทิพย์ สุวรรณศาสตร์}
 \newcommand{\thakeywords}{การสร้างกรณีทดสอบ, ภาษาจาวา, กราฟการเรียกใช้เชิงสถิต}
 \newcommand{\engkeywords}{Test case generation, Java language, Static call graph}
-\newcommand{\ThesisThaName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
-\newcommand{\ThesisEngName}{Test case generation based on Java static call graph}
