Fixed unknown control

--- a/commands.tex
+++ b/commands.tex
@@ -42,7 +42,7 @@
         \centering
         \label{tab:thesisname}
         \begin{tabular*}{\linewidth}{ll@{\extracolsep{\fill}}}
-            {\bf ภาษาอังกฤษ} & {\ifdefinded\ThesisEnglishName \ThesisEnglishName\fi} \\
+            {\bf ภาษาอังกฤษ} & {\ifdefined\ThesisEnglishName \ThesisEnglishName\fi} \\
             {\bf ภาษาไทย}   & {\ifdefined\ThesisThaiName \ThesisThaiName \fi} \\
         \end{tabular*}
     \end{table}
