--- a/configures.tex
+++ b/configures.tex
@@ -1,6 +1,13 @@
 \usepackage{indentfirst}
+\usepackage{graphicx}
+\graphicspath{ {figures/} }
 \usepackage{titlesec}
+\usepackage{pdflscape}
 
 \titleformat{\section}{\bfseries}{\thesection}{1em}{}
 
 \setlength\parindent{0.5in}
+\setlength\parskip{.5em}
+\titlespacing\section{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
+\titlespacing\subsection{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
+\titlespacing\subsubsection{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
