Add methodology process

--- a/methodology/methodology.tex
+++ b/methodology/methodology.tex
@@ -1,1 +1,13 @@
 \section{แนวคิดและวิธีการดำเนินงาน}
+
+ในการดำเนินงานนั้น
+
+\clearpage
+\begin{landscape}
+    \begin{figure}[h!]
+        \centering
+        \includegraphics[height=\textwidth]{methodology-overview}
+        \caption{ภาพรวมการดำเนินงานวิจัย}
+        \label{fig:methodologyoverview}
+    \end{figure}
+\end{landscape}
