--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,5 +1,5 @@
 \section{ที่มาและความสำคัญ} 
 
-การทดสอบซอฟต์แวร์เป็นกระบวนการสำคัญในขั้นตอนการพัฒนาซอฟต์แวร์ เพื่อให้มั่นใจได้ว่าซอฟต์แวร์นั้นสามารถทำงานได้ถูกต้องตามที่กำหนดไว้ \cite{Luo2001} 
-ทั้งยังเป็นขั้นตอนที่ใช้บุคลากร งบประมาณ และระยะเวลาโดยรวมแล้วกว่าครึ่งหนึ่งของทรัพยากรทั้งหมดที่ใช้ในกระบวนการพัฒนาซอฟต์แวร์ \cite{singh2011} 
-และด้วยการพัฒนาโดยใช้ภาษาในยุคที่ 4 (Fourth-generation languages - 4GLs) ที่ต้องการความรวดเร็วในกระบวนการพัฒนาแล้วด้วยนั้น ส่งผลให้ความสำคัญของกระบวนการทดสอบซอฟต์แวร์นั้นเพิ่มมากขึ้นตามไปด้วยเช่นกัน \cite{Luo2001} 
+% การทดสอบซอฟต์แวร์เป็นกระบวนการสำคัญในขั้นตอนการพัฒนาซอฟต์แวร์ เพื่อให้มั่นใจได้ว่าซอฟต์แวร์นั้นสามารถทำงานได้ถูกต้องตามที่กำหนดไว้ \cite{Luo2001} 
+% ทั้งยังเป็นขั้นตอนที่ใช้บุคลากร งบประมาณ และระยะเวลาโดยรวมแล้วกว่าครึ่งหนึ่งของทรัพยากรทั้งหมดที่ใช้ในกระบวนการพัฒนาซอฟต์แวร์ \cite{singh2011} 
+% และด้วยการพัฒนาโดยใช้ภาษาในยุคที่ 4 (Fourth-generation languages - 4GLs) ที่ต้องการความรวดเร็วในกระบวนการพัฒนาแล้วด้วยนั้น ส่งผลให้ความสำคัญของกระบวนการทดสอบซอฟต์แวร์นั้นเพิ่มมากขึ้นตามไปด้วยเช่นกัน \cite{Luo2001} 
