Structure related theories

--- a/related/related.tex
+++ b/related/related.tex
@@ -1,1 +1,17 @@
 \section{ทฤษฎีที่เกี่ยวข้อง} 
+
+อธิบายทฤฏีที่เกี่ยวข้องกับงานที่ต้องทำ
+
+\input{related/stg-info}
+
+\input{related/cfg-info}
+
+\input{related/software-testing}
+
+\input{related/regression-testing}
+
+\input{related/java-specification}
+
+\input{related/test-case-generation}
+
+\input{related/test-data-generation}
