--- a/configures.tex
+++ b/configures.tex
@@ -3,8 +3,11 @@
 \graphicspath{ {figures/} }
 \usepackage{titlesec}
 \usepackage{pdflscape}
+\usepackage{adjustbox}
 
-\titleformat{\section}{\bfseries}{\thesection}{1em}{}
+\titleformat{\section}{\bfseries}{\thesection}{1.3em}{}
+\titleformat{\subsection}{\bfseries}{\thesubsection}{1em}{}
+\titleformat{\subsubsection}{\bfseries}{\thesubsubsection}{1em}{}
 
 \setlength\parindent{0.5in}
 \setlength\parskip{.5em}
