Update lexicon word list

--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -3,6 +3,30 @@
 \newcommand{\ThesisTopic}{หัวข้อวิทยานิพนธ์}
 
 % - - - - - - - - - - - - - - - - - - - -
+% Control words
+% - - - - - - - - - - - - - - - - - - - -
+\newcommand{\stg}{กราฟการเรียกเชิงสถิต}
+\newcommand{\stgen}{Static call graph}
+
+\newcommand{\cfg}{กราฟการไหลของการควบคุม}
+\newcommand{\cfgen}{Control flow graph}
+
+\newcommand{\FeasiblePath}{เส้นทางที่เป็นไปได้}
+\newcommand{\FeasiblePathEN}{Feasible path}
+
+\newcommand{\InfeasiblePath}{เส้นทางที่เป็นไปไม่ได้}
+\newcommand{\InfeasiblePathEN}{Infeasible path}
+
+\newcommand{\FeasibleAndInfeasiblePath}{เส้นทางที่เป็นไปได้และไม่ได้}
+\newcommand{\FeasibleAndInfeasiblePathEN}{Feasib/Users/sitdh/Desktop/vector-Overwatch-Ana-wallpaper.jpg Infeasible path}
+
+\newcommand{\sourcecode}{ชุดรหัสต้นฉบับ}
+
+\newcommand{\TestCaseGeneration}{การสร้างข้อมูลทดสอบ}
+\newcommand{\TestCaseGenerationEN}{Test data generation}
+
+
+% - - - - - - - - - - - - - - - - - - - -
 % NEED BY \makethesiscover
 % - - - - - - - - - - - - - - - - - - - -
 \newcommand{\ThesisThaiName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
