--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,5 +1,11 @@
 \section{ที่มาและความสำคัญ} 
 
+ในกระบวนการพัฒนาซอฟต์แวร์ทรัพยากรมากกว่าครึ่งหนึ่งของการดำเนินโครงการทั้งงบประมาณ เครื่องมือ และบุคลากร นั้นใช้ไปในขั้นตอนการทดสอบซอฟต์แวร์ %\cite 
+ทั้งนี้ก็เพื่อตรวจสอบข้อผิดพลาดที่เกิดระหว่างการพัฒนาทั้งในชุดรหัสต้นฉบับ (Source code) ฮาร์ดแวร์ประกอบ รวมไปถึงสภาพแวดล้อมการดำเนินงาน 
+จุดประสงค์หลักก็เพื่อรับประกันคุณภาพของซอฟต์แวร์ที่พัฒนาขึ้น และรับรองการทำงานว่าสอดคล้องตามข้อกำหนดที่ระบุไว้
+
+ซึ่งกระบวนการพัฒนาซอฟต์แวร์เองได้มีการประประยุกต์วิธีการให้เข้ากับความต้องการเชิงธุรกิจที่มักเปลี่ยนแปลงอย่างรวดเร็ว ... ดังนั้นการ
+
 % การทดสอบซอฟต์แวร์เป็นกระบวนการสำคัญในขั้นตอนการพัฒนาซอฟต์แวร์ เพื่อให้มั่นใจได้ว่าซอฟต์แวร์นั้นสามารถทำงานได้ถูกต้องตามที่กำหนดไว้ \cite{Luo2001} 
 % ทั้งยังเป็นขั้นตอนที่ใช้บุคลากร งบประมาณ และระยะเวลาโดยรวมแล้วกว่าครึ่งหนึ่งของทรัพยากรทั้งหมดที่ใช้ในกระบวนการพัฒนาซอฟต์แวร์ \cite{singh2011} 
 % และด้วยการพัฒนาโดยใช้ภาษาในยุคที่ 4 (Fourth-generation languages - 4GLs) ที่ต้องการความรวดเร็วในกระบวนการพัฒนาแล้วด้วยนั้น ส่งผลให้ความสำคัญของกระบวนการทดสอบซอฟต์แวร์นั้นเพิ่มมากขึ้นตามไปด้วยเช่นกัน \cite{Luo2001} 
