--- a/references.bib
+++ b/references.bib
@@ -121,3 +121,96 @@
     year = {2014}
 }
 
+@article{Allen:1970:CFA:390013.808479,
+    author = {Allen, Frances E.},
+    title = {Control Flow Analysis},
+    journal = {SIGPLAN Not.},
+    issue_date = {July 1970},
+    volume = {5},
+    number = {7},
+    month = jul,
+    year = {1970},
+    issn = {0362-1340},
+    pages = {1--19},
+    numpages = {19},
+    url = {http://doi.acm.org/10.1145/390013.808479},
+    doi = {10.1145/390013.808479},
+    acmid = {808479},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
+
+@article{Anand2013,
+    abstract = {Test case generation is among the most labour-intensive tasks in software testing. It also has a strong impact on the effectiveness and efficiency of software testing. For these reasons, it has been one of the most active research topics in software testing for several decades, resulting in many different approaches and tools. This paper presents an orchestrated survey of the most prominent techniques for automatic generation of software test cases, reviewed in self-standing sections. The techniques presented include: (a) structural testing using symbolic execution, (b) model-based testing, (c) combinatorial testing, (d) random testing and its variant of adaptive random testing, and (e) search-based testing. Each section is contributed by world-renowned active researchers on the technique, and briefly covers the basic ideas underlying the method, the current state of the art, a discussion of the open research problems, and a perspective of the future development of the approach. As a whole, the paper aims at giving an introductory, up-to-date and (relatively) short overview of research in automatic test case generation, while ensuring a comprehensive and authoritative treatment. {\textcopyright} 2013 Elsevier Inc. All rights reserved.},
+    author = {Anand, Saswat and Burke, Edmund K. and Chen, Tsong Yueh and Clark, John and Cohen, Myra B. and Grieskamp, Wolfgang and Harman, Mark and Harrold, Mary Jean and McMinn, Phil},
+    doi = {10.1016/j.jss.2013.02.061},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Theory-of-Testing/1-s2.0-S0164121213000563-main.pdf:pdf},
+    isbn = {0164-1212},
+    issn = {01641212},
+    journal = {Journal of Systems and Software},
+    keywords = {Adaptive random testing,Combinatorial testing,Model-based testing,Orchestrated survey,Search-based software testing,Software testing,Symbolic execution,Test automation,Test case generation},
+    mendeley-groups = {Testing},
+    number = {8},
+    pages = {1978--2001},
+    title = {{An orchestrated survey of methodologies for automated software test case generation}},
+    volume = {86},
+    year = {2013}
+}
+
+@article{Ma2016,
+    author = {Ma, Lei and Artho, Cyrille and Zhang, Cheng and Sato, Hiroyuki and Gmeiner, Johannes and Ramler, Rudolf},
+    doi = {10.1109/ASE.2015.49},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Random-Testing/07372010.pdf:pdf},
+    isbn = {9781509000241},
+    journal = {Proceedings - 2015 30th IEEE/ACM International Conference on Automated Software Engineering, ASE 2015},
+    keywords = {Automatic test generation,Dynamic analysis,Random testing,Static analysis},
+    mendeley-groups = {Random-Testing},
+    pages = {212--223},
+    title = {{GRT: Program-analysis-guided random testing}},
+    year = {2016}
+}
+
+@article{Heaton2000,
+    abstract = {Intonational characteristics of Thai sentences were used to evaluate fundamental frequency (F(0)) control in brain-damaged patients with unilateral left and right hemisphere lesions. Subjects (n = 41) included 9 young and 10 old normal adults, 12 right hemisphere patients, and 10 left hemisphere aphasic patients (7 fluent and 3 nonfluent). Sentences were comprised of six words, three of which were keywords occurring in sentence-initial, -medial, and -final positions. All 125 possible sequences of three of the five Thai tones (mid, low, falling, high, rising) were superimposed on monosyllabic keywords. Utterances were produced at a conversational speaking rate. Average F(0) of keywords was analyzed as a function of sentence position, tone, and group. For both normal and brain-damaged speakers, results indicated that tones in sentence-final position were significantly lower in F(0) than in either sentence-initial or -medial position; falling and high tones were significantly higher in F(0) than mid, low, and rising tones. Findings are discussed in relation to issues pertaining to hemispheric specialization and the nature of F(0) deficits in nonfluent and fluent aphasic patients},
+    author = {Heaton, Kelly Bowman and Hawley, Michael and Benton, Stephen a},
+    doi = {10.1007/11531142_22},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Random-Testing/eclat.pdf:pdf},
+    isbn = {3-540-27992-X, 978-3-540-27992-1},
+    issn = {03029743},
+    journal = {Archives},
+    mendeley-groups = {Random-Testing},
+    number = {1994},
+    pages = {174--196},
+    title = {{Eclat: Automatic Generation and Classification of Test Inputs}},
+    url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.84.2349{\&}rep=rep1{\&}type=pdf},
+    volume = {58},
+    year = {2000}
+}
+
+@phdthesis{Pacheco2005,
+    abstract = {This thesis describes a technique that selects, from a large set of test inputs, a small subset likely to reveal faults in the software under test. The technique takes a program or software component, plus a set of correct executions-say, from observations of the software running properly, or from an existing test suite that a user wishes to enhance. The technique first infers an operational model of the software's operation. Then, inputs whose operational pattern of execution differs from the model in specific ways are suggestive of faults. These inputs are further reduced by selecting only one input per operational pattern. The result is a small portion of the original inputs, deemed by the technique as most likely to reveal faults. Thus, the technique can also be seen as an error-detection technique. The thesis describes two additional techniques that complement test input selection. One is a technique for automatically producing an oracle (a set of assertions) for a test input from the operational model, thus transforming the test input into a test case. The other is a classification-guided test input generation technique that also makes use of operational models and patterns. When generating inputs, it filters out code sequences that are unlikely to contribute to legal inputs, improving the efficiency of its search for fault-revealing inputs.(cont.) We have implemented these techniques in the Eclat tool, which generates unit tests for Java classes. Eclat's input is a set of classes to test and an example program execution- say, a passing test suite. Eclat's output is a set of JUnit test cases, each containing a potentially fault-revealing input and a set of assertions at least one of which fails. In our experiments, Eclat successfully generated inputs that exposed fault-revealing behavior; we have used Eclat to reveal real errors in programs. The inputs it selects as fault-revealing are an order of magnitude as likely to reveal a fault as all generated inputs.},
+    author = {Pacheco, Carlos},
+    doi = {http://hdl.handle.net/1721.1/33855},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Random-Testing/66277169-MIT.pdf:pdf},
+    keywords = {Computer Science,Electrical Engineering},
+    mendeley-groups = {Random-Testing},
+    school = {Massachusetts Institute of Technology},
+    title = {{Automatic generation and classification of test inputs}},
+    url = {http://hdl.handle.net/1721.1/33855},
+    year = {2005}
+}
+
+@ARTICLE{6363461, 
+    author={H. Mei and D. Hao and L. Zhang and L. Zhang and J. Zhou and G. Rothermel}, 
+    journal={IEEE Transactions on Software Engineering}, 
+    title={A Static Approach to Prioritizing JUnit Test Cases}, 
+    year={2012}, 
+    volume={38}, 
+    number={6}, 
+    pages={1258-1275}, 
+    abstract={Test case prioritization is used in regression testing to schedule the execution order of test cases so as to expose faults earlier in testing. Over the past few years, many test case prioritization techniques have been proposed in the literature. Most of these techniques require data on dynamic execution in the form of code coverage information for test cases. However, the collection of dynamic code coverage information on test cases has several associated drawbacks including cost increases and reduction in prioritization precision. In this paper, we propose an approach to prioritizing test cases in the absence of coverage information that operates on Java programs tested under the JUnit framework-an increasingly popular class of systems. Our approach, JUnit test case Prioritization Techniques operating in the Absence of coverage information (JUPTA), analyzes the static call graphs of JUnit test cases and the program under test to estimate the ability of each test case to achieve code coverage, and then schedules the order of these test cases based on those estimates. To evaluate the effectiveness of JUPTA, we conducted an empirical study on 19 versions of four Java programs ranging from 2K-80K lines of code, and compared several variants of JUPTA with three control techniques, and several other existing dynamic coverage-based test case prioritization techniques, assessing the abilities of the techniques to increase the rate of fault detection of test suites. Our results show that the test suites constructed by JUPTA are more effective than those in random and untreated test orders in terms of fault-detection effectiveness. Although the test suites constructed by dynamic coverage-based techniques retain fault-detection effectiveness advantages, the fault-detection effectiveness of the test suites constructed by JUPTA is close to that of the test suites constructed by those techniques, and the fault-detection effectiveness of the test suites constructed by some of - UPTA's variants is better than that of the test suites constructed by several of those techniques.}, 
+    keywords={Java;program testing;regression analysis;software fault tolerance;JUPTA;JUnit test case prioritization techniques operating in the absence of coverage information;Java programs;dynamic code coverage information;dynamic coverage-based techniques;fault-detection effectiveness;regression testing;static approach;static call graphs;test case prioritization techniques;Regression analysis;Scheduling;Software testing;JUnit;Software testing;call graph;regression testing;test case prioritization}, 
+    doi={10.1109/TSE.2011.106}, 
+    ISSN={0098-5589}, 
+    month={Nov},
+}
