--- a/related-work/related-work.tex
+++ b/related-work/related-work.tex
@@ -1,1 +1,12 @@
 \section{งานวิจัยที่เกี่ยวข้อง} 
+
+\subsubsection{A Static Approach to Prioritizing JUnit Test Cases \cite{6363461}}
+ที่มา
+
+\subsubsection{Eclat: Automatic Generation and Classification of Test Inputs \cite{Heaton2000}}
+
+\subsubsection{GRT: Program-analysis-guided random testing \cite{Ma2016}}
+วิธีการสร้างกรอบข้อมูล เพื่อช่วยให้การสร้างข้อมูลทดสอบทำได้ง่ายมากยิ่งขึ้น
+
+\subsubsection{Automatic generation and classification of test inputs \cite{Pacheco2005}}
+การสร้างกลุ่มของกรณีทดสอบอย่างอัตโนมัติ ช่วยในการสร้างกรณีทดสอบ
